Add product Catogorization Function
Add product Catogorization Function by Richard

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -42,3 +42,13 @@
 /UserDetails$1.class
 /UserDetails.class
 /View.class
+/Admin.class
+/AdminProductDetails$1.class
+/AdminProductDetails$2.class
+/AdminProductDetails.class
+/AdminProductListView$1.class
+/AdminProductListView$2.class
+/AdminProductListView$3.class
+/AdminProductListView.class
+/User.class
+/ProductListView$4.class
